--- a/index.html
+++ b/index.html
@@ -23,19 +23,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     
     <!-- Start Single Page Apps for GitHub Pages -->
-    <script>
-      // Single Page Apps for GitHub Pages - Redirect Handler
-      (function(l) {
-        if (l.search[1] === '/' ) {
-          var decoded = l.search.slice(1).split('&').map(function(s) { 
-            return s.replace(/~and~/g, '&')
-          }).join('?');
-          window.history.replaceState(null, null,
-              l.pathname.slice(0, -1) + decoded + l.hash
-          );
-        }
-      }(window.location))
-    </script>
+    <script src="/spa-redirect.js"></script>
     <!-- End Single Page Apps for GitHub Pages -->
     
   </head>
